<resources>
    <string name="app_name">App_main</string>
    <string name="I_am_an_employee_btn">I am an employee</string>
    <string name="I_am_a_manager_btn">I am a manager</string>
    <string name="home_page_title">Reduce the workloads of HR management</string>
    <string name="HomePage_image_description">Employee Image Icon</string>

    <string name="Employee_login_title">Employee Login</string>
    <string name="Employee_name">Employee Name</string>
    <string name="Employee_access_Token">Access Token</string>
    <string name="text_hours_worked">Hours Worked</string>

    <string name="Login_btn">Login</string>

    <string name="Manager_login_title">Manager Login</string>
    <string name="Manager_email">Admin Email</string>
    <string name="Manager_password">Password</string>

    <string name="button_add_employee">Add\nEmployee</string>
    <string name="button_edit_employee">Edit\nEmployee</string>
    <string name="button_delete_employee">Delete\nEmployee</string>
    <string name="button_logout">Logout</string>
    <string name="button_send_a_message">Send a\nmessage</string>
    <string name="button_send_message">Send message</string>
    <string name="button_employee_lookup">Employee\nLookup</string>
    <string name="button_assign_videos">Assign\nTraining\nVideos</string>
    <string name="button_generate_payslips">Generate\nPayslips</string>
    <string name="button_submit">Submit</string>
    <string name="button_update_employee">Update Employee</string>
    <string name="button_clock_in">Clock In</string>
    <string name="button_clock_out">Clock Out</string>
    <string name="button_break_start">Break Start</string>
    <string name="button_break_end">Break End</string>
    <string name="button_assign_video">Assign Video</string>
    <string name="button_generate_pdf">Generate PDF</string>

    <string name="menu_heading_1">Manage Employee</string>
    <string name="menu_heading_2">Quick Actions</string>
    <string name="menu_heading_3">Reports</string>
    <string name="heading_select_employee">Select an Employee</string>
    <string name="heading_welcome_back">Welcome Back</string>
    <string name="heading_current_status">Current Status</string>
    <string name="heading_quick_actions">Quick Actions</string>

    <string name="subheading_clock_in">Clock In</string>
    <string name="subheading_clock_out">Clock Out</string>
    <string name="subheading_break_start">Break Start</string>
    <string name="subheading_break_end">Break End</string>
    <string name="subheading_filter_actions">Filter Actions</string>

    <string name="page_title_add_employee">Add an Employee</string>
    <string name="page_title_edit_employee">Edit an Employee</string>
    <string name="page_title_update_employee">Update an Employee</string>
    <string name="page_title_delete_employee">Delete an Employee</string>
    <string name="page_title_send_message">Send a message</string>
    <string name="page_title_employee_lookup">Employee Lookup</string>
    <string name="page_title_assign_video">Assign Training Video</string>
    <string name="page_title_generate_reports">Generate Reports</string>

</resources>