<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".Views.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bottom_border"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_welcome_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/heading_welcome_back"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="38dp" />

            <TextView
                android:id="@+id/employee_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="TextView"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="38dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/email" />
            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/text_current_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/heading_current_status"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/employee_current_status_bg"
        android:elevation="8dp"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_current_status">

        <TextView
            android:id="@+id/text_current_status_editable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="Current Status shows here" />

        <LinearLayout
            android:id="@+id/linear_layout_employee_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:paddingBottom="15dp"
            android:baselineAligned="false"
            android:background="@drawable/bottom_border_no_bg"
            tools:layout_editor_absoluteX="16dp">


            <RelativeLayout
                android:id="@+id/relative_layout_child_clock_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_clock_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/button_clock_in"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:id="@id/text_clock_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_clock_in"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/subheading_clock_in" />

                <TextView
                    android:id="@+id/text_clock_in_editable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_clock_in"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:text="--:--" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_child_clock_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_clock_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/button_clock_out"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:id="@id/text_clock_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_clock_out"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/subheading_clock_out" />

                <TextView
                    android:id="@+id/text_clock_out_editable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_clock_out"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:text="--:--" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_child_break_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_break_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/button_break_start"
                    android:src="@drawable/ic_break" />

                <TextView
                    android:id="@+id/text_break_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_break_start"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/subheading_break_start" />

                <TextView
                    android:id="@+id/text_break_start_editable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_break_start"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:text="--:--" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_child_break_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_break_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/button_break_end"
                    android:src="@drawable/ic_break" />

                <TextView
                    android:id="@+id/text_break_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_break_end"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/subheading_break_end" />

                <TextView
                    android:id="@+id/text_break_end_editable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_break_end"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:text="--:--" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_hours_worked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_employee_status"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/text_hours_worked" />

        <TextView
            android:id="@+id/text_total_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_employee_status"
            android:layout_alignRight="@+id/text_hours_worked"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="-68dp"
            android:fontFamily="@font/montserrat"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/text_quick_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/heading_quick_actions"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout4"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_quick_actions">

        <LinearLayout
            android:id="@+id/linear_layout_btn_grp_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clock_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_primary"
                android:drawableLeft="@drawable/ic_clock_white"
                android:fontFamily="@font/montserrat_medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/button_clock_in"
                android:textSize="16sp"
                app:cornerRadius="4dp" />

            <Button
                android:id="@+id/btn_break_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_primary"
                android:drawableLeft="@drawable/ic_break_white"
                android:fontFamily="@font/montserrat_medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/button_break_start"
                android:textSize="16sp"
                app:cornerRadius="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_btn_grp_1"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_clock_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_primary"
                android:drawableLeft="@drawable/ic_clock_white"
                android:fontFamily="@font/montserrat_medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/button_clock_out"
                android:textSize="16sp"
                app:cornerRadius="4dp" />

            <Button
                android:id="@+id/btn_break_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_primary"
                android:drawableLeft="@drawable/ic_break_white"
                android:fontFamily="@font/montserrat_medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/button_break_end"
                android:textSize="16sp"
                app:cornerRadius="4dp" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_employee_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/danger"
        android:drawableLeft="@drawable/ic_logout"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_horizontal"
        android:paddingStart="100dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/button_logout"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:iconPadding="-80dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5"
        tools:layout_editor_absoluteX="90dp" />


</androidx.constraintlayout.widget.ConstraintLayout>