<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".Views.employee_lookup">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bottom_border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/page_title_generate_reports"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/text_select_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/heading_select_employee"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/employee_reports_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:layout_below="@id/text_select_employee"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_bg_spinner"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:cornerRadius="10dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_generate_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:backgroundTint="@color/blue_primary"
        android:drawableLeft="@drawable/ic_send_message"
        android:fontFamily="@font/montserrat_medium"
        android:paddingStart="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/button_generate_pdf"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:iconPadding="-20dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>